<resources>
    <string name="app_name">ShoppingBuddy</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_firstname">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_terms">I Agree To The <u>Terms and Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="title_activity_side">SideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_forget_password">FORGOT PASSWORD</string>
    <string name="forgot_password_description">Please enter your registered email ID \n We will Send an E-mail for re-setting password</string>

    <string name="err_msg_enter_first_name">Please enter First name</string>
    <string name="err_msg_enter_last_name">Please enter Last name</string>
    <string name="err_msg_enter_email">PLease enter E-mail</string>
    <string name="err_msg_enter_password">Please enter Password</string>
    <string name="err_msg_enter_confirm_password">Please enter Confirm Password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirm Password do not match</string>
    <string name="err_msg_i_agree_terms">Please agree to terms and condition</string>
    <string name="homepage">Home</string>
    <string name="my_order">My Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="help_centre">Help Centre</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer">Navigation Drawer</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_address">Address: H/No. 23, XYZ colony, Shankar Vihar, Delhi, Pin: 123456</string>
    <string name="contact_iinfo">Contact US at 18009023523 for customer support</string>
    <string name="contact_us_email">Email us at QueryofShoppingBuddy@gmail.com</string>
    <string name="feedback_request">Give us feedback on feedback@demo and Rate us on Play Store</string>
</resources>