<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activties.fragments.Help_CentreFragment">

    <util.MSPTextView
        android:id="@+id/txt_help_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/btb_textSize"
        android:text="HELP CENTRE"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt_help_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help_header"
        android:padding="10dp"
        android:text="@string/contact_iinfo"
        android:textSize="15sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/txt_help_contact_us_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help_contact_us"
        android:padding="10dp"
        android:text="@string/contact_us_email"
        android:textSize="15sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/txt_help_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help_contact_us_email"
        android:padding="10dp"
        android:text="@string/feedback_request"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <util.MSPButton
        android:id="@+id/btn_help_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help_feedback"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="FAQ"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>